<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_margin="16dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardTitle"
                    android:text="@string/name"/>

            <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardContent"
                    android:text="@string/name"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardTitle"
                    android:text="@string/lastName"/>

            <TextView
                    android:id="@+id/txtLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardContent"
                    android:text="@string/lastName"/>

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardTitle"
                    android:text="@string/mobile"/>

            <TextView
                    android:id="@+id/txtMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardContent"
                    android:text="@string/mobile"/>

            <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardTitle"
                    android:text="@string/address"/>

            <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/cardContent"
                    android:text="@string/address"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>