<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_300"
        tools:context=".ui.register.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        <TextView
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:textSize="@dimen/material_text_title"/>
    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
            android:id="@+id/titleFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_800"
                android:text="@string/register_input_data_message"
                android:textSize="@dimen/material_text_subhead"
                android:layout_gravity="right"/>

    </FrameLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintTop_toBottomOf="@+id/titleFrame">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutBaseInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@color/white"
                    android:padding="8dp"
                    app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RegisterFieldsStyle"
                        android:hint="@string/name">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtName"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:inputType="text"
                            android:nextFocusDown="@+id/txtLastName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RegisterFieldsStyle"
                        android:hint="@string/lastName">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtLastName"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:inputType="text"
                            android:nextFocusDown="@+id/txtMobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RegisterFieldsStyle"
                        android:hint="@string/mobile">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtMobile"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:inputType="phone"
                            android:nextFocusDown="@+id/txtPhone"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RegisterFieldsStyle"
                        android:hint="@string/phone">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtPhone"
                            android:imeOptions="actionNext"
                            android:lines="1"
                            android:inputType="phone"
                            android:nextFocusDown="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/layoutMoreInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:background="@color/white"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/layoutBaseInfo">


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/inputAddress"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/RegisterFieldsStyle"
                        android:hint="@string/address">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <lib.kingja.switchbutton.SwitchMultiButton
                            android:id="@+id/switchGender"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:layout_gravity="center_vertical"
                            android:padding="8dp"
                            android:layout_margin="12dp"
                            app:smb_strokeRadius="5dp"
                            app:smb_strokeWidth="1dp"
                            app:smb_selectedTab="0"
                            app:smb_selectedColor="@color/colorAccent"
                            app:smb_switchTabs="@array/genders"
                            app:smb_textSize="@dimen/material_text_body1"
                            app:smb_typeface="iransans.ttf"/>

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".5"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/material_text_subhead"
                            android:layout_gravity="center_vertical"
                            android:text="@string/gender"/>
                </LinearLayout>


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/next_step"
            app:backgroundTint="@color/button_green"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textSize="@dimen/material_text_title"/>


</androidx.constraintlayout.widget.ConstraintLayout>