<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

        <TextView
                android:text="@string/location_in_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="8dp"
                android:textSize="@dimen/material_text_title"/>
    </androidx.appcompat.widget.Toolbar>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:map="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="0dp"
              android:id="@+id/map"
              tools:context=".ui.map.MapActivity"
              map:layout_constraintTop_toBottomOf="@+id/toolbar"
              map:layout_constraintBottom_toBottomOf="parent"
              android:name="com.google.android.gms.maps.SupportMapFragment"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            app:layout_constraintLeft_toLeftOf="@+id/map"
            app:layout_constraintRight_toRightOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            app:layout_constraintBottom_toBottomOf="@+id/map"
            />

    <FrameLayout
            android:id="@+id/titleFrame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/white_transparent"
            android:layout_margin="8dp"
            android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_800"
                android:text="@string/select_location_message"
                android:textSize="@dimen/material_text_subhead"
                android:layout_gravity="right"/>

    </FrameLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/accept_location"
            app:backgroundTint="@color/button_green"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.Colored"
            android:padding="16dp"
            android:layout_margin="16dp"
            android:textSize="@dimen/material_text_title"/>


    <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>